@@ -401,6 +401,47 @@ test_16( void )
   return TEST_PASS;
 }
 
+/* Test for bug #1802618: TZX jump blocks broken */
+static test_return_t
+test_17( void )
+{
+  libspectrum_byte *buffer = NULL;
+  size_t filesize = 0;
+  libspectrum_tape *tape;
+  const char *filename = "jump.tzx";
+  libspectrum_dword tstates;
+  int flags;
+
+  if( read_file( &buffer, &filesize, filename ) ) return TEST_INCOMPLETE;
+
+  if( libspectrum_tape_alloc( &tape ) ) {
+    free( buffer );
+    return TEST_INCOMPLETE;
+  }
+
+  if( libspectrum_tape_read( tape, buffer, filesize, LIBSPECTRUM_ID_UNKNOWN,
+			     filename ) ) {
+    libspectrum_tape_free( tape );
+    free( buffer );
+    return TEST_INCOMPLETE;
+  }
+
+  free( buffer );
+
+  do {
+
+    if( libspectrum_tape_get_next_edge( &tstates, &flags, tape ) ) {
+      libspectrum_tape_free( tape );
+      return TEST_INCOMPLETE;
+    }
+
+  } while( !( flags & LIBSPECTRUM_TAPE_FLAGS_STOP ) );
+
+  if( libspectrum_tape_free( tape ) ) return TEST_INCOMPLETE;
+
+  return TEST_PASS;
+}
+
 struct test_description {
 
   test_fn test;
@@ -426,6 +467,7 @@ static struct test_description tests[] = {
   { test_14, "TZX loop blocks", 0 },
   { test_15, "Complete TZX file", 0 },
   { test_16, "TZX loop blocks 2", 0 },
+  { test_17, "TZX jump blocks", 0 },
 };
 
 static size_t test_count = sizeof( tests ) / sizeof( tests[0] );
